--- a/react/react-plants/src/PlantCard.css
+++ b/react/react-plants/src/PlantCard.css
@@ -1,49 +1,49 @@
-.icons{
-    display: flex;
-    justify-content: space-between;
-    background-color: white;
-   border: none;
+.icons {
+  display: flex;
+  justify-content: space-between;
+  background-color: white;
+  border: none;
 }
-button{
-    background-color: white;
-    color: black;
-    border: none;
-    cursor: pointer;
+button {
+  background-color: white;
+  color: black;
+  border: none;
+  cursor: pointer;
 }
-.basket-svg:hover{
-    filter: brightness(0.8) saturate(50%) invert(35%) sepia(30%) saturate(450%) hue-rotate(40deg);
+.basket-svg:hover {
+  filter: brightness(0.8) saturate(50%) invert(35%) sepia(30%) saturate(450%)
+    hue-rotate(40deg);
 }
-.plant-card{
-    display: flex;
-    flex-direction: column;
-    /* line-height: 0.5px; */
-    position: relative;
+.plant-card {
+  display: flex;
+  flex-direction: column;
+  /* line-height: 0.5px; */
+  position: relative;
 }
-input[type="checkbox"]{
-    background-image: url(./images/heart.svg);
-    border-radius: 100%;
-    width: 35px;
-    height: 35px;
+input[type="checkbox"] {
+  background-image: url(./images/heart.svg);
+  border-radius: 100%;
+  width: 35px;
+  height: 35px;
 }
-p{
-    font-size: rem;
+p {
+  font-size: rem;
 }
 .checkbox {
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: 1;
-    appearance: none;
-    -webkit-appearance: none; /* Для Safari */
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1;
+  appearance: none;
+  -webkit-appearance: none; /* Для Safari */
 
-    background: white;
-    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
-    border: 1px solid #FFFFFF;
-    cursor: pointer;
- 
+  background: white;
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
+  border: 1px solid #ffffff;
+  cursor: pointer;
 }
 .checkbox::after {
-    content: "";
+  content: "";
   position: absolute;
   top: 50%; /* Центрируем по вертикали */
   left: 50%; /* Центрируем по горизонтали */
@@ -56,48 +56,49 @@ p{
   background-position: center;
   display: block; /* Важно для отображения */
   transition: opacity 0.2s;
-
 }
 .checkbox:checked::after {
-    filter: brightness(0) saturate(100%) invert(45%) sepia(80%) saturate(350%) hue-rotate(300deg);
-  }
-  /* .checkbox:checked{
+  filter: brightness(0) saturate(100%) invert(45%) sepia(80%) saturate(350%)
+    hue-rotate(300deg);
+}
+/* .checkbox:checked{
     background-color: rgba(255, 0, 0, 0.500);
   } */
 .radio-input {
   border-radius: 50%;
 }
-.checkbox-icon{
-    background-image: url(./images/heart.svg);
-    width: 20px;
-    height: 20px;
-    background-size: cover;
+.checkbox-icon {
+  background-image: url(./images/heart.svg);
+  width: 20px;
+  height: 20px;
+  background-size: cover;
 }
-.rating{
-    display: flex;
-    font-size: 1.2rem;
-    align-items: center;
-    justify-content: center;
+.rating {
+  display: flex;
+  font-size: 1.2rem;
+  align-items: center;
+  justify-content: center;
 }
-.star-svg{
-    filter: brightness(0) saturate(100%) invert(75%) sepia(50%) saturate(320%) hue-rotate(10deg);
+.star-svg {
+  filter: brightness(0) saturate(100%) invert(75%) sepia(50%) saturate(320%)
+    hue-rotate(10deg);
 }
-.to-plant-info{
-    background-color: #d4e4d2;
-    color: black;
-    border: none;
-    padding: 0.4rem 0.4rem;
-    font-size: 1rem;
-    font-family: 'Roboto', sans-serif;
-    cursor: pointer;
-    width: 40%;
-    border-radius: 40px;
+.to-plant-info {
+  background-color: #d4e4d2;
+  color: black;
+  border: none;
+  padding: 0.4rem 0.4rem;
+  font-size: 1rem;
+  font-family: "Roboto", sans-serif;
+  cursor: pointer;
+  /* width: 40%; */
+  border-radius: 40px;
 }
-.to-plant-info:hover{
-    background-color: #9fb19c;
+.to-plant-info:hover {
+  background-color: #9fb19c;
 }
-.price-and-description{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.price-and-description {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
