--- a/react/react-plants/src/PlantsMenu.css
+++ b/react/react-plants/src/PlantsMenu.css
@@ -1,10 +1,17 @@
-.plants-menu{
-    display: flex;
-    flex-direction: row;
-    gap: 2rem; 
-    flex-wrap: wrap;
-    justify-content: center;
+.plants-menu {
+  display: flex;
+  flex-direction: row;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin-left: 0.5rem;
+  /* justify-content: center; */
 }
-h2{
-    margin-left: 2rem;
+h2 {
+  margin-left: 2rem;
+}
+@media (max-width: 576px) {
+  .plants-menu {
+    margin-left: 0;
+    justify-content: center;
+  }
 }
